[project]
name = "dev-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "gtts>=2.5.4",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langgraph>=0.3.31",
    "openai-whisper>=20240930",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "transformers>=4.51.3",
]
