[project]
name = "dev-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "gtts>=2.5.4",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langgraph>=0.3.31",
    "openai>=1.76.2",
    "openai-whisper>=20240930",
    "protobuf>=6.30.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.3",
]
